# SMB2WorkshopMod

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  default-config.txt  music-id-list.txt  theme-id-list.txt
.devcontainer/: Dockerfile  devcontainer.json
configs/: default-authors.txt  default-config.txt  default-subtitles.txt  theme-id-list.txt
docs/: README.md  theme-id-list.txt
rel/: assembly.cpp  config.cpp  cxx.cpp  draw.cpp  heap.cpp  inputdisp.cpp  iw.cpp  jump.cpp  main.cpp  memstore.cpp  menu_defn.cpp  menu_impl.cpp  modlink.cpp  pad.cpp  patch.cpp  relpatches.cpp  relutil.cpp  savestate.cpp  scratch.cpp  tetris.cpp  timer.cpp  ui_box.cpp  version.cpp
rel/assembly/: music_id_per_stage.s  rain_ripple_fix.s  stobj_reflection_fix.s  story_mode_char_select.s  story_mode_music_fix.s
rel/include/: assembly.h  config.h  draw.h  heap.h  iw.h  list.h  log.h  main.h  menu_defn.h  mkb.h  mkb2.us.lst  mkb2_ghidra.h  modlink.h  pad.h  patch.h  ppcutil.h  relpatches.h  relutil.h  scratch.h  ui_box.h  vecutil.h  version.h
relloader/zephiles-loader/: GM2E8P.gct  REL_Loader_EU_Gecko_Source.txt  REL_Loader_JP_Gecko_Source.txt  REL_Loader_US_Gecko_Source.txt  REL_Loader_US_ISO.txt  REL_Loader_US_ISO_Source.asm
script/: configure-clion-project.sh  configure-project.sh  go-wsl.sh  import-external-tools.sh  package-for-release.sh  package-project-template-wsl.sh  package-project-template.sh  ppcinject-patch-windows.bat
script/clion-config/: External Tools.xml  customTargets.xml
src/: heap.cpp  main.cpp  rel.cpp  relpatches.cpp
src/assembly/: music_id_per_stage.s  story_mode_char_select.s  theme_id_per_stage.s
src/config/: config.cpp  config.h
src/include/: config.h  draw.h  mkb2.us.lst  version.h
src/internal/: assembly.cpp  assembly.h  draw.cpp  draw.h  etl_profile.h  heap.cpp  heap.h  list.h  log.cpp  log.h  modlink.h  pad.cpp  pad.h  patch.h  relutil.cpp  relutil.h  tickable.cpp  tickable.h  ui_box.cpp  ui_box.h  utils.h  version.cpp  (+1 more)
(+205 files in other folders)
